--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"url": "git+https://github.com/nulfrost/leaflet-loader-astro.git"
 	},
 	"scripts": {
+		"lint": "biome lint",
 		"lex-gen": "lex gen-api ./src/__generated__/lexicons ./lexicons/pub/leaflet/* ./lexicons/pub/leaflet/*/* ./lexicons/com/atproto/*/* --yes",
 		"typecheck": "tsc --noEmit",
 		"build": "tsc"
@@ -30,6 +31,7 @@
 	"main": "dist/index.js",
 	"devDependencies": {
 		"@atproto/lex-cli": "^0.9.1",
+		"@biomejs/biome": "2.1.3",
 		"@types/sanitize-html": "^2.16.0",
 		"astro": "^5.12.8",
 		"tsup": "^8.5.0",
