--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 	},
 	"scripts": {
 		"lint": "biome lint",
-		"lex-gen": "lex gen-api ./src/__generated__/lexicons ./lexicons/pub/leaflet/* ./lexicons/pub/leaflet/*/* ./lexicons/com/atproto/*/* --yes",
+		"lex-gen": "lex gen-api ./src/leaflet/lexicons ./lexicons/pub/leaflet/* ./lexicons/pub/leaflet/*/* ./lexicons/com/atproto/*/* --yes",
 		"typecheck": "tsc --noEmit",
-		"build": "tsc"
+		"build": "rm -rf dist && tsc"
 	},
 	"license": "MIT",
 	"files": [
@@ -41,7 +41,10 @@
 	"dependencies": {
 		"@atproto/api": "^0.16.1",
 		"@atproto/did": "^0.1.5",
+		"@atproto/lexicon": "^0.4.12",
 		"@atproto/syntax": "^0.4.0",
+		"@atproto/xrpc": "^0.7.1",
+		"multiformats": "^13.4.0",
 		"sanitize-html": "^2.17.0"
 	}
 }
