switch to @atcute/lex-cli

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,10 @@
 		"strict": true,
 		"noUncheckedIndexedAccess": true,
 		"noImplicitOverride": true,
-		"module": "esnext",
+		"module": "nodenext",
 		"baseUrl": "./src",
 		"outDir": "dist",
-		"moduleResolution": "bundler",
+		"moduleResolution": "nodenext",
 		"rootDir": "src",
 		"sourceMap": true,
 		"noEmit": true,
