--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 	"scripts": {
 		"lint": "biome lint",
 		"format": "biome format --write ./src",
+		"lex": "lex-cli generate -c ./lex.config.js",
 		"test": "vitest --run",
-		"lex-gen": "lex gen-api ./src/leaflet/lexicons ./lexicons/pub/leaflet/* ./lexicons/pub/leaflet/*/* ./lexicons/com/atproto/*/* --yes",
 		"typecheck": "tsc",
 		"build": "rm -rf dist && tsup"
 	},
@@ -38,7 +38,7 @@
 		}
 	},
 	"devDependencies": {
-		"@atproto/lex-cli": "^0.9.1",
+		"@atcute/lex-cli": "^2.1.1",
 		"@biomejs/biome": "2.1.3",
 		"@types/sanitize-html": "^2.16.0",
 		"astro": "^5.12.8",
@@ -47,12 +47,9 @@
 		"vitest": "^3.2.4"
 	},
 	"dependencies": {
+		"@atcute/lexicons": "^1.1.0",
 		"@atproto/api": "^0.16.1",
 		"@atproto/did": "^0.1.5",
-		"@atproto/lexicon": "^0.4.12",
-		"@atproto/syntax": "^0.4.0",
-		"@atproto/xrpc": "^0.7.1",
-		"multiformats": "^13.4.0",
 		"sanitize-html": "^2.17.0"
 	}
 }
