--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"lex": "lex-cli generate -c ./lex.config.js",
 		"test": "vitest --run",
 		"typecheck": "tsc",
-		"build": "rm -rf dist && tsup",
+		"build": "rm -rf dist && tsup --format esm --dts",
 		"pack": "pnpm build && pnpm pack"
 	},
 	"license": "MIT",
@@ -32,6 +32,8 @@
 	],
 	"type": "module",
 	"main": "dist/index.js",
+	"module": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"exports": {
 		".": {
 			"import": "./dist/index.js",
@@ -41,6 +43,7 @@
 	"devDependencies": {
 		"@atcute/lex-cli": "^2.1.1",
 		"@biomejs/biome": "2.1.3",
+		"@changesets/cli": "^2.29.5",
 		"@types/sanitize-html": "^2.16.0",
 		"astro": "^5.12.8",
 		"tsup": "^8.5.0",
