update package.json to allow for public package

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
 	"files": [
 		"dist"
 	],
+	"publishConfig": {
+		"access": "public"
+	},
 	"type": "module",
 	"main": "dist/index.js",
 	"module": "dist/index.js",
