--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
 		}
 	},
 	"devDependencies": {
+		"@atcute/atproto": "^3.1.1",
 		"@atcute/lex-cli": "^2.1.1",
 		"@biomejs/biome": "2.1.3",
 		"@changesets/cli": "^2.29.5",
+		"@types/bun": "^1.2.19",
 		"@types/sanitize-html": "^2.16.0",
 		"astro": "^5.12.8",
 		"tsup": "^8.5.0",
@@ -55,8 +57,8 @@
 		"vitest": "^3.2.4"
 	},
 	"dependencies": {
+		"@atcute/client": "^4.0.3",
 		"@atcute/lexicons": "^1.1.0",
-		"@atproto/api": "^0.16.1",
 		"@atproto/did": "^0.1.5",
 		"katex": "^0.16.22",
 		"sanitize-html": "^2.17.0"
