--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 	"dependencies": {
 		"@atcute/client": "^4.0.3",
 		"@atcute/lexicons": "^1.1.0",
+		"@atproto/api": "^0.16.2",
 		"@atproto/did": "^0.1.5",
 		"katex": "^0.16.22",
 		"sanitize-html": "^2.17.0"
